--- a/src/Component/Home/Component/Panel/panel.scss
+++ b/src/Component/Home/Component/Panel/panel.scss
@@ -121,9 +121,13 @@
                         vertical-align: middle;
                         font-size: 16px;
                         line-height: 30px;
-                        color: #888;
+                        color: #333;
 
                         max-width: 70%;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
