--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: #e1e1e1;
+  font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti, sans-serif !important;
 }
 
 * {
@@ -17,5 +18,5 @@ a {
 }
 
 img {
-  display: block;
+  border: 0;
 }
